fix: alignement footer; max-width 768/1080

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -181,6 +181,29 @@ $blue--dark: #003a68;
     .restaurant-container h3 {
       align-self: flex-start;
     }
+
+    footer {
+      min-height: 114px;
+      width: 100%;
+      padding: 0;
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    .footer-up-container {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0px 20px;
+      gap: 60px;
+      width: 100%;
+      max-width: 768px;
+    }
+
+    .footer-container {
+      flex-direction: row;
+    }
   }
 
 @media (min-width: 1024px) {
@@ -255,8 +278,10 @@ footer {
     padding: 64px 90px 30px 0px;
   }
 
-.footer-container {
-    flex-direction: row;
+  .footer-up-container {
+    max-width: 1080px;
+    gap: 30px;
+    padding: 0;
   }
 
 .first-pack,
